Fixed Gallery section styles to be active on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,10 @@
     --bg-overlay: rgba(0, 0, 0, 0.7);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .pri-font {
     font-family: "IBM Plex Sans", sans-serif;
 }
